--- a/public/css/main.css
+++ b/public/css/main.css
@@ -133,3 +133,66 @@ h3 {
 .read {
     display: none;
 }
+
+
+
+/* ------------------- chat user list ------------------- */
+
+
+
+
+.media-body {
+    padding-left: 10px;
+}
+
+.media-body small {
+    font-size: 10px;
+    color: #000;
+}
+
+.media-heading {
+    margin-bottom: 0;
+}
+
+
+
+.img-circle {
+    border-radius: 50%;
+    width: 95%;
+    height: 95%;
+}
+
+.pull-left {
+
+    width: 25%;
+
+}
+
+
+
+/* ------------------------------------------------------ */
+
+
+/* ----------------- circle letter avatar ---------------- */
+:root {
+    --avatar-size: 3rem;
+    /* change this value anything, e.g., 100px, 10rem, etc. */
+  }
+  
+  .circle {
+    border-radius: 50%;
+    height: var(--avatar-size);
+    text-align: center;
+    width: var(--avatar-size);
+  }
+  
+  .initials {
+    font-size: calc(var(--avatar-size) / 2); /* 50% of parent */
+    line-height: 1;
+    position: relative;
+    top: calc(var(--avatar-size) / 4); /* 25% of parent */
+    color: #ffffff;
+  }
+  
+/* ------------------------------------------------------- */
+
